--- a/SEA_Application/Views/Receipts/FeeHistory.cshtml
+++ b/SEA_Application/Views/Receipts/FeeHistory.cshtml
@@ -20,24 +20,19 @@ else
 }
 <style>
     .numberColumn {
-        text-align: center !important;
+        text-align: center;
     }
-
     #datatable_filter {
-        display: block !important;
+        display:block !important;
     }
-
 </style>
 
 <div class="card">
     <div class="card-body p-4">
         <table class="table hover table-bordered table-striped" id="datatable">
-            <thead >
+            <thead>
                 <tr>
-                    <th class="hidden">
-                        Id
-                    </th>
-                    <th style="text-align:center">
+                    <th>
                         Receipt #
                     </th>
                     @*<th>
@@ -47,10 +42,7 @@ else
             Course
         </th>*@
                     <th>
-                        Roll No
-                    </th>
-                    <th>
-                        Received From
+                        Student
                     </th>
                     @*<th>
             Description
@@ -79,11 +71,7 @@ else
                 @foreach (var item in Model)
                 {
                     <tr>
-                        <td class="hidden" >
-                           @item.Id
-                          
-                        </td>
-                        <td style="text-align:center">
+                        <td>
                             @Html.DisplayFor(modelItem => item.ReceiptNo)
                             <input type="hidden" value="@item.Id" />
                         </td>
@@ -94,14 +82,6 @@ else
         <td>
             @Html.DisplayFor(modelItem => item.Course)
         </td>*@
-                        <td>
-                            @if (item.UserId != null)
-                            {
-                                <span>@item.AspNetUser.UserName</span>
-                            }
-
-                        </td>
-
                         <td>
 
                             @if (item.ReceivedFrom != null)
@@ -131,11 +111,12 @@ else
 
                         </td>
 
-
                         <td style="text-align:center !important">
 
                             @if (item.Discount != null)
                             {
+
+
                                 <span>  @item.Discount.Value.ToString("#,##0") </span>
                             }
 
@@ -143,7 +124,6 @@ else
                         <td>
                             @item.Dated.Value.ToString(string.Format("dd/MM/yyyy"))
                         </td>
-
                         <td>
                             @if (item.DueDate != null)
                             {
@@ -170,39 +150,28 @@ else
 <script>
     $(document).ready(function () {
 
-        $("#PageHeader").html("Cash Receipts");
+        $("#PageHeader").html("Fee Details");
 
 
         var table = $('#datatable').dataTable({
             buttons: [
-               
-                {
-                    text: '<span class="datatableButtonsEdit"> <img src="/Content/assets/assets/icons/Icon-edit.png" alt=""> Create</span>',
-                    action: function (e, dt, button, config) {
-                        window.location.href = '/Receipts/Create';
-                    }
-                }
+
+              
 
             ],
-            order: [[0, 'desc']],
             columnDefs: [{
-              
-                targets: [3], className: 'numberColumn'
-             
-            },
-            {
 
-                targets: [0], className: 'numberColumn', width: 120
+                targets: [3], className: 'numberColumn'
 
             },
                 {
 
-                    targets: [2]
+                    targets: [0], className: 'numberColumn', width: 120
 
                 },
                 {
 
-                    targets: [1], width: 120
+                    targets: [2], className: 'numberColumn'
 
                 },
                 {
@@ -210,9 +179,9 @@ else
                     targets: [4], className: 'numberColumn'
 
                 }
-              
+
             ],
-           
+
             "language": {
                 "lengthMenu": "<div class=\"d-flex showEntriesCon\">\n" +
                     "  <div class=\"p-2\">Show </div> <div class=\"showEntries\"> _MENU_\n" +
@@ -231,30 +200,30 @@ else
             dom: "<'row mb-3'<'col-sm-12 col-md-2 col-lg-2'l><'col-sm-12 col-md-10 col-lg-10 datatableButtonsCon text-right'Bf>>" +
                 "<'row'<'col-sm-12 datatablesData'tr>>" +
                 "<'row mt-4'<'col-sm-12 col-md-4 col-lg-6 infoCon'i><'col-sm-12 col-md-8 col-lg-6 pagCon'p>>"
-          
+
         });
 
-        //var AllTds = $("td:nth-child(3)");
+        var AllTds = $("td:nth-child(3)");
 
-        // for (var i = 0; i < AllTds.length; i++) {
+         for (var i = 0; i < AllTds.length; i++) {
 
-        //    var CommaSeparatedValue = numberWithCommas(AllTds[i].innerHTML);
+            var CommaSeparatedValue = numberWithCommas(AllTds[i].innerHTML);
 
-        //    AllTds[i].innerHTML = CommaSeparatedValue;
-        //}
+            AllTds[i].innerHTML = CommaSeparatedValue;
+        }
 
 
 
-        $('#datatable').on('click', 'tbody tr td:nth-child(1),td:nth-child(2),td:nth-child(3),td:nth-child(4),td:nth-child(5),td:nth-child(6)', function () {
-            var td = $(this).parent().children("td");
-            var InventoryID = $(td[0]).children("input").val();
+        //$('#datatable').on('click', 'tbody tr td:nth-child(1),td:nth-child(2),td:nth-child(3),td:nth-child(4)', function () {
+        //    var td = $(this).parent().children("td");
+        //    var InventoryID = $(td[0]).children("input").val();
 
-           // alert(InventoryID)
-            var Id = parseInt(InventoryID);
+        //   // alert(InventoryID)
+        //    var Id = parseInt(InventoryID);
 
-            // alert(Id);
-          //  window.location.href = "/Receipts/Edit?id=" + Id;
-        });
+        //    // alert(Id);
+        //    window.location.href = "/Receipts/Edit?id=" + Id;
+        //});
 
 
 
@@ -277,6 +246,6 @@ else
     function printReceipt(id) {
 
         window.location.href = "/Receipts/PrintReceipt?id=" + id;
-        
+
     }
 </script>
